# liboffsetup

./: .travis.yml  Cargo.toml  README.md
.cargo/: config
examples/: dependencies.yaml  exposes.yml  invalid_source_download_no1.yml  invalid_source_download_no2.yml  platform.yaml  redis.yml  simple.yml  source.yaml  system.yaml  valid_source_download.yml
examples/scanner/new/mixed_go_rust/: go_file.go  rust_file.rs
examples/scanner/new/nodejs/: javascript_file.js  typescript_file.ts
examples/scanner/new/rust/: rust_file.rs
src/: lib.rs  scanning.rs
src/scanning/: mod.rs  platform.rs
src/scanning/unknown/: mod.rs
src/scanning/windows/: mod.rs  registry.rs  release_id.rs  winapi.rs
