[package]
name = "liboffsetup"
version = "0.0.7"
authors = ["Samuel Marks @SamuelMarks", "Peter Badenhorst @dev10",  "Agustin Chiappe Berrini @AgustinCB"]
edition = "2018"
license = "Apache-2.0 OR MIT"

[dependencies]
config = "0.9.3"
itertools = "0.8.0"
lazy_static = "1.3.0"
os_type = "2.2.0"
structopt = "0.2.18"
structopt-derive = "0.2.18"
serde = { version = "1.0.98", features = ["derive"] }
urlparse = "0.7.3"
validator = "0.9.0"
validator_derive = "0.9.0"
walkdir = "2.2.9"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.7", features = ["sysinfoapi","winuser"] }
